--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,10 @@
             <p class="site-description">{{ site.description }}</p>
           </div>
 
+            <nav>
+            <a href="{{ site.baseurl }}/">Motivation</a>
+              
+          </nav>
         </header>
       </div>
     </div>
