--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,11 @@
     <div id="main" role="main" class="container">
       {{ content }}
     </div>
-
+	
+     </div>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/YVyGsVzWPtg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+    
     <div class="wrapper-footer">
       <div class="container">
         <footer class="footer">
