--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,11 +34,14 @@
       </div>
     </div>
 
+    <div>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/YVyGsVzWPtg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+    
     <div id="main" role="main" class="container">
       {{ content }}
     </div>
 	
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/YVyGsVzWPtg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     
     <div class="wrapper-footer">
       <div class="container">
