--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
       </div>
     </div>
 
-    <div>
+    <div class="container">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/YVyGsVzWPtg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
     
