--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
     </div>
 
     <div class="container">
-        <iframe width="560" height="315" src="https://www.youtube.com/watch?v=dkJYITFW_PY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+       <iframe width="560" height="315" src="https://www.youtube.com/embed/dkJYITFW_PY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
     
     <div id="main" role="main" class="container">
